# UCV-ate-si-lab03

./: README.md
laboratorio3_kedro/: pyproject.toml
laboratorio3_kedro/conf/base/: parameters.yml
laboratorio3_kedro/src/laboratorio3_kedro/: pipeline_registry.py
laboratorio3_kedro/src/laboratorio3_kedro/pipelines/histogram/: analyzer.py  nodes.py  pipeline.py
laboratorio3_kedro/tests/: test_analyzer.py
repositorios/UCV-ate-si-lab03/: README.md
repositorios/UCV-ate-si-lab03/laboratorio3_kedro/: pyproject.toml
repositorios/UCV-ate-si-lab03/laboratorio3_kedro/conf/base/: parameters.yml
repositorios/UCV-ate-si-lab03/laboratorio3_kedro/src/laboratorio3_kedro/: pipeline_registry.py
repositorios/UCV-ate-si-lab03/laboratorio3_kedro/src/laboratorio3_kedro/pipelines/histogram/: analyzer.py  nodes.py  pipeline.py
repositorios/UCV-ate-si-lab03/laboratorio3_kedro/tests/: test_analyzer.py
