[tool.poetry]
name = "laboratorio3-kedro"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.11"
kedro = ">=1.3.1,<2.0.0"
opencv-python = ">=4.13.0.92,<5.0.0.0"
numpy = ">=2.4.4,<3.0.0"
matplotlib = ">=3.10.9,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "laboratorio3_kedro"
project_name = "laboratorio3-kedro"
kedro_init_version = "1.3.1"
source_dir = "src"
[tool.kedro_telemetry]
project_id = "c1e4c47152744935aebdf89c3b3368af"
